style: fix styling bleeding, give proper size for headers

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -38,11 +38,30 @@ h1, h2, h3, h4, h5, h6, span, strong, em {
 * {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  font-size: 14px;
 }
 
 h1, h2, h3, h4 {
   font-family: 'Jost', sans-serif;
   font-weight: 600;
+}
+
+h1 { font-size: 2em; }
+h2 { font-size: 1.5em; }
+h3 { font-size: 1.17em; }
+h4 { font-size: 1em; }
+h5 { font-size: 0.83em; }
+h6 { font-size: 0.67em; }
+h1, h2, h3, h4, h5, h6 { margin-top: 1.6em; margin-bottom: 0.8em; }
+
+@media (max-width: 768px) {
+  * {
+    font-size: 12px;
+  }
+
+  .container {
+    padding: 10px;
+  }
 }
 
 .svs-button-transparent {
